--- a/README
+++ b/README
@@ -1,1 +1,13 @@
-A Literate Programming -style documentation generator, for CoffeeScript, for now.
+ ____                                                      
+/\  _`\                                                    
+\ \ \/\ \        ___         ___         ___         ___   
+ \ \ \ \ \      / __`\      /'___\      /'___\      / __`\ 
+  \ \ \_\ \    /\ \ \ \    /\ \__/     /\ \__/     /\ \ \ \
+   \ \____/    \ \____/    \ \____\    \ \____\    \ \____/
+    \/___/      \/___/      \/____/     \/____/     \/___/ 
+
+
+Docco is a quick-and-dirty, hundred-line-long, literate-programming-style
+documentation generator. For more information, see:
+
+http://jashkenas.github.com/docco/
