--- a/README
+++ b/README
@@ -11,3 +11,17 @@ Docco is a quick-and-dirty, hundred-line-long, literate-programming-style
 documentation generator. For more information, see:
 
 http://jashkenas.github.com/docco/
+
+===================================================================
+
+This fork supports JSDoc style comments and highlights declared parameters.
+
+Example:
+
+/**
+ * @description Lolify someone's name
+ * @param {String} name A person's name
+ */
+function lolify(name) {
+   return 'OH HAI ' + name + ' KTHXBAI';
+}
