Fix broken Coffee block comment parsing matchers.  - `docco.coffee` runs properly with `-b` flag.  - Update language tests to support variable numbers of expected comments per source type.    * This addresses cases in which the single-line comment symbol overlaps with the block comments (e.g. # and ###).      In the case of a coffee file with (1) single, and (1) block comment, if parsed without `-b`, the file will pick up (3) comments, instead of (1), because it matches the begin/end block comment lines as single-line comments (`#`##).

--- a/test/comments/tex.tex
+++ b/test/comments/tex.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article} 
 \usepackage{verbatim} 
-% Comment
+% Single:1 - Block:2
 \title{Hello World!} 
 \date{} 
 \begin{document} 
