--- a/README
+++ b/README
@@ -1,6 +1,4 @@
-This fork removes the dependency on Pygments and replaces it with the highlight.js node_module (https://github.com/isagalaev/highlight.js)
-
-____                                                      
+ ____                                                      
 /\  _`\                                                    
 \ \ \/\ \        ___         ___         ___         ___   
  \ \ \ \ \      / __`\      /'___\      /'___\      / __`\ 
@@ -16,12 +14,13 @@ http://jashkenas.github.com/docco/
 
 $ docco 
 
- Usage: docco [options] <filePattern ...>
+  Usage: docco [options] <filePattern ...>
 
   Options:
 
-    -h, --help             output usage information
-    -V, --version          output the version number
-    -c, --css [file]       use a custom css file
-    -o, --output [path]    use a custom output path
-    -t, --template [file]  use a custom .jst template
+    -h, --help                     output usage information
+    -V, --version                  output the version number
+    -c, --css [file]               use a custom css file
+    -o, --output [path]            use a custom output path
+    -t, --template [file]          use a custom .jst template
+    -h, --highlight [highlighter]  choose between "pygments" or "highlightjs"
