Add notes about how to build and test docco

--- a/README
+++ b/README
@@ -12,9 +12,7 @@ documentation generator. For more information, see:
 
 http://jashkenas.github.com/docco/
 
-$ docco 
-
- Usage: docco [options] <filePattern ...>
+Usage: docco [options] <filePattern ...>
 
   Options:
 
@@ -23,3 +21,10 @@ $ docco
     -c, --css [file]       use a custom css file
     -o, --output [path]    use a custom output path
     -t, --template [file]  use a custom .jst template
+
+Building and Testing:
+
+  npm install
+  cake build
+  cake test
+  
