Add instruction for installing Pygments in Readme
Fixes #81

--- a/README
+++ b/README
@@ -28,3 +28,4 @@ Building and Testing:
   cake build
   cake test
   
+For code syntax highlighting, install Python Pygments with `sudo easy_install pygments`
