Adding support for --force-ext option.
Allows the user to specify an extension on the commandline. When
present, all input files will be processed as if they have this
extension.

--- a/README
+++ b/README
@@ -21,6 +21,7 @@ Usage: docco [options] <filePattern ...>
     -c, --css [file]       use a custom css file
     -o, --output [path]    use a custom output path
     -t, --template [file]  use a custom .jst template
+    --force-ext <ext>      treat the target files as if they have a specific extension
 
 Building and Testing:
 
