--- a/README
+++ b/README
@@ -1,10 +1,10 @@
- ____                                                      
-/\  _`\                                                    
-\ \ \/\ \        ___         ___         ___         ___   
- \ \ \ \ \      / __`\      /'___\      /'___\      / __`\ 
+ ____
+/\  _`\
+\ \ \/\ \        ___         ___         ___         ___
+ \ \ \ \ \      / __`\      /'___\      /'___\      / __`\
   \ \ \_\ \    /\ \ \ \    /\ \__/     /\ \__/     /\ \ \ \
    \ \____/    \ \____/    \ \____\    \ \____\    \ \____/
-    \/___/      \/___/      \/____/     \/____/     \/___/ 
+    \/___/      \/___/      \/____/     \/____/     \/___/
 
 
 Docco is a quick-and-dirty, hundred-line-long, literate-programming-style
@@ -12,7 +12,11 @@ documentation generator. For more information, see:
 
 http://jashkenas.github.com/docco/
 
-Usage: docco [options] <filePattern ...>
+Installation:
+
+  sudo npm install -g docco
+
+Usage: docco [options] FILES
 
   Options:
 
@@ -23,10 +27,4 @@ Usage: docco [options] <filePattern ...>
     -t, --template [file]  use a custom .jst template
     -e, --extension <ext>  use the given file extension for all inputs
 
-Building and Testing:
-
-  npm install
-  cake build
-  cake test
-  
 For code syntax highlighting, install Python Pygments with `sudo easy_install pygments`
