--- a/README
+++ b/README
@@ -29,3 +29,4 @@ Usage: docco [options] FILES
     -e, --extension [ext]  use the given file extension for all inputs
     -L, --languages [file] use a custom languages.json
     -m, --marked [file]    use custom marked options
+    -i, --ignore [file]    ignore unsupported languages
