move to major version 1.0.0 Breaking changes: Defaults to hierarchical file write. output directory's directory structure will match the directory structure where the original files are located. -f --flatten overrides Theme jst files must change 'path.basename(destination(source))'  to 'destination(source)' (todo: backward compatibility flag?) Markdown files show images on the right side of the page. (todo: add flag for backward compatibility) Optional .docco.json file can have glob based filename specifications: '**/*.coffee'.  Parameter -s --setup for specifying a docco.json file. Copies .jpg, .jpeg, .png, and .tiff files if specified. TODO: drier code, variable file extensions in the target directory. breaking changes with flatten and themes

--- a/README
+++ b/README
@@ -20,12 +20,14 @@ Usage: docco [options] FILES
 
   Options:
 
-    -h, --help             output usage information
-    -V, --version          output the version number
-    -l, --layout [layout]  choose a built-in layouts (parallel, linear)
     -c, --css [file]       use a custom css file
-    -o, --output [path]    use a custom output path
-    -t, --template [file]  use a custom .jst template
     -e, --extension [ext]  use the given file extension for all inputs
+    -f, --flatten          flatten the directory hierarchy
+    -h, --help             output usage information
+    -l, --layout [layout]  choose a built-in layouts (parallel, linear)
     -L, --languages [file] use a custom languages.json
     -m, --marked [file]    use custom marked options
+    -o, --output [path]    use a custom output path
+    -s, --setup [file],    use configuration file, normally docco.json
+    -t, --template [file]  use a custom .jst template
+    -V, --version          output the version number
