--- a/README
+++ b/README
@@ -12,11 +12,11 @@ documentation generator. For more information, see:
 
 http://jashkenas.github.com/docco/
 
-Installation:
+### Installation:
 
   sudo npm install -g docco
 
-Usage: docco [options] FILES
+### Usage: docco [options] [FILES]
 
   Options:
 
@@ -32,7 +32,42 @@ Usage: docco [options] FILES
     -t, --template [file]  use a custom .jst template
     -V, --version          output the version number
 
-TODO:
+### Configuring docco (.docco.json)
+
+Docco a JSON configuration file for use so that command line specification of files is unnecessary.
+The default file for this is .docco.json, but you can the command line parameter -s/--setup file to specify a different name.
+This file should be in the working directory where the command is run.
+
+```
+{
+  "sources": [
+    "docco.litcoffee",
+    "README.md"
+  ]
+  "layout": "linear"
+}
+```
+
+Other values possible are:
+
+```
+      layout:     'parallel'
+      output:     'doc'
+      css:        'somefile.css'
+      marked:     null
+      setup:      '.docco.json'
+      flatten:    true
+```
+
+### Build:
+
+```
+npm install
+npm run clean
+npm run build
+```
+
+### TODO:
 
     * Multiline comments
     * Links to files that are included or required
